Bug 306917 - Kopete crash on closing account settings page
Summary: Kopete crash on closing account settings page
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.2.5
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-17 09:21 UTC by Herman M. Hofman
Modified: 2013-06-01 21:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Herman M. Hofman 2012-09-17 09:21:24 UTC
Application: kopete (1.2.5)
KDE Platform Version: 4.8.5 (4.8.5)
Qt Version: 4.8.2
Operating System: Linux 3.5.3-1.fc17.x86_64 x86_64
Distribution (Platform): Fedora RPMs

-- Information about the crash:
- What I was doing when the application crashed:
Pushing Apply seems to work. 
pushing OK crashes, even when nothing has changed. 

- Custom settings of the application:
changed the connection of our indoor XMPP (openfire) from a local address to the external address

The crash can be reproduced every time.

-- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f860bab1880 (LWP 2970))]

Thread 5 (Thread 0x7f85fa887700 (LWP 2971)):
#0  0x00007fffae9ff827 in clock_gettime ()
#1  0x000000370760410d in clock_gettime () from /lib64/librt.so.1
#2  0x00000037112d14a4 in ?? () from /lib64/libQtCore.so.4
#3  0x00000037113a4d0d in ?? () from /lib64/libQtCore.so.4
#4  0x00000037113a5053 in ?? () from /lib64/libQtCore.so.4
#5  0x00000037113a3bcc in ?? () from /lib64/libQtCore.so.4
#6  0x00000037113a3c75 in ?? () from /lib64/libQtCore.so.4
#7  0x000000370624719f in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#8  0x000000370624788b in ?? () from /lib64/libglib-2.0.so.0
#9  0x0000003706247a84 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#10 0x00000037113a4506 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#11 0x000000371137513f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#12 0x00000037113753c8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#13 0x000000371646e803 in QCA::SyncThread::run() () from /lib64/libqca.so.2
#14 0x000000371127b5eb in ?? () from /lib64/libQtCore.so.4
#15 0x0000003706e07d14 in start_thread () from /lib64/libpthread.so.0
#16 0x00000037066f167d in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7f85fa086700 (LWP 2972)):
#0  0x00000037066e8bcf in poll () from /lib64/libc.so.6
#1  0x0000003706247964 in ?? () from /lib64/libglib-2.0.so.0
#2  0x0000003706247a84 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00000037113a4506 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#4  0x000000371137513f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#5  0x00000037113753c8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#6  0x00007f85fda3bb0f in ?? () from /usr/lib64/kde4/kopete_jabber.so
#7  0x000000371127b5eb in ?? () from /lib64/libQtCore.so.4
#8  0x0000003706e07d14 in start_thread () from /lib64/libpthread.so.0
#9  0x00000037066f167d in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f85e3fff700 (LWP 2976)):
#0  0x0000003706e0b902 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x000000371127ba47 in QWaitCondition::wait(QMutex*, unsigned long) () from /lib64/libQtCore.so.4
#2  0x000000371126f36f in ?? () from /lib64/libQtCore.so.4
#3  0x000000371127b5eb in ?? () from /lib64/libQtCore.so.4
#4  0x0000003706e07d14 in start_thread () from /lib64/libpthread.so.0
#5  0x00000037066f167d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f85e2ffd700 (LWP 2980)):
#0  0x00000037066ea9e3 in select () from /lib64/libc.so.6
#1  0x00007f85fd698500 in posix_timer_do () from /lib64/libortp.so.8
#2  0x00007f85fd698f85 in rtp_scheduler_schedule () from /lib64/libortp.so.8
#3  0x0000003706e07d14 in start_thread () from /lib64/libpthread.so.0
#4  0x00000037066f167d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f860bab1880 (LWP 2970)):
[KCrash Handler]
#5  0x00000037155a9091 in ?? () from /lib64/libkdeui.so.5
#6  0x000000371138acee in QObject::event(QEvent*) () from /lib64/libQtCore.so.4
#7  0x00000037143ca37c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQtGui.so.4
#8  0x00000037143ce7fa in QApplication::notify(QObject*, QEvent*) () from /lib64/libQtGui.so.4
#9  0x00000037156462b6 in KApplication::notify(QObject*, QEvent*) () from /lib64/libkdeui.so.5
#10 0x00000037113763ee in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /lib64/libQtCore.so.4
#11 0x0000003711379ea1 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib64/libQtCore.so.4
#12 0x00000037113a4353 in ?? () from /lib64/libQtCore.so.4
#13 0x0000003706247695 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#14 0x00000037062479c8 in ?? () from /lib64/libglib-2.0.so.0
#15 0x0000003706247a84 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#16 0x00000037113a44e6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#17 0x000000371446a2ee in ?? () from /lib64/libQtGui.so.4
#18 0x000000371137513f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#19 0x00000037113753c8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#20 0x000000371137a1b8 in QCoreApplication::exec() () from /lib64/libQtCore.so.4
#21 0x00000000004138bb in ?? ()
#22 0x0000003706621735 in __libc_start_main () from /lib64/libc.so.6
#23 0x0000000000413921 in _start ()

Possible duplicates by query: bug 306908, bug 306887, bug 306846, bug 306841, bug 306819.

Reported using DrKonqi
Comment 1 Pali Rohár 2013-06-01 21:34:18 UTC
SVN commit 1356753 by pali:

Wrap Edit account dialog into QPointer

* Edit account dialog using KDialog::exec() function which can lead to memory corruption and double free
* After this change Jabber edit account dialog stopped crashing when applying changes

Related: bug 306585
Related: bug 243653
Related: bug 244764
FIXED-IN: 4.11


 M  +4 -3      kopeteaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1356753