Wrap Edit account dialog into QPointer

* Edit account dialog using KDialog::exec() function which can lead to memory corruption and double free
* After this change Jabber edit account dialog stopped crashing when applying changes

BUG: 306917
BUG: 306585
BUG: 243653
BUG: 244764
FIXED-IN: 4.11

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1356753